# discord-conversation-logger

./: Cargo.toml  README.md  discord-config.example.json  load-discord-env.sh  setup-discord-env.sh
src/: discord.rs  logger.rs  main.rs
